[add] get users's character
