# actions/handlers/user.go
@@ -281,3 +281,35 @@ func (h userHandler) GetCoins(c echo.Context) error {
 
 	return c.JSON(http.StatusOK, users)
 }
+
+// GetAvatars godoc
+//
+//	@Summary		Get Avatar.
+//	@Description	Get avatar by token.
+//	@Tags			users
+//	@Accept			json
+//	@Produce		json
+//	@Success		200		{object}	utils.DataResponse
+//	@Router			/users/avatars [get]
+//
+// @Security BearerAuth
+func (h userHandler) GetAvatars(c echo.Context) error {
+
+	token := c.Request().Header.Get("Authorization")
+
+	users, err := h.userService.GetAvatars(token)
+	if err != nil {
+
+		appErr, ok := err.(errs.AppError)
+		if ok {
+			return c.JSON(appErr.Code, utils.ErrorResponse{
+				Message: appErr.Message,
+			})
+		}
+		return c.JSON(http.StatusInternalServerError, utils.ErrorResponse{
+			Message: err.Error(),
+		})
+	}
+
+	return c.JSON(http.StatusOK, users)
+}
